Fixed: Zoom-effect on mobile by clicking a button too fast

--- a/02_javascript/click-counter/style.css
+++ b/02_javascript/click-counter/style.css
@@ -3,6 +3,8 @@
 
 html { font-size: 0.625em; }
 
+
+
 /* Layout */
 
 body {
@@ -70,6 +72,7 @@ body {
     border-radius: 1rem;
     box-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.5);
     font-weight: bold;
+    touch-action: manipulation; /* should deactivate ZOOM-effect on mobile */
 }
 
 .content__count {
